--- a/misc/courses.html
+++ b/misc/courses.html
@@ -4,7 +4,7 @@
 <title> Course Outline</title>
 <link rel= "stylesheet" href= "../personal_website/css/stylesheet.css">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-
+<script src= "script/script.js"></script>
 </head>
 <body>
             
